added angel investing section

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ pages_list:
   Family band: '/familyband'
   Climbing: '/climbing'
   My better half: '/jane'
-#  Portfolio: '/portfolio'
+  Angel Investing: '/angel'
+#  Recent work: '/recentwork'
   # Archive: '/archive'
   # Feed: '/index.html'
