add group facilitation

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           pretty
 
 # Setup
-title:               Nathan Maton - Coach, Angel investor, Outdoor lover
+title:               Nathan Maton - Coach, Group Facilitator, Outdoor lover
 # tagline:             Portfolio
 url:                 http://nathanmaton.github.io
 paginate:            2
